
set(BASE_SRCS_POSIX
)
    

set(BASE_SRCS_LINUX
    native_library_posix.cc
    synchronization/waitable_event_posix.cc
    synchronization/waitable_event_watcher_posix.cc
)

set(BASE_SRCS_MAC
    mac/authorization_util.h
    mac/authorization_util.mm
    mac/availability.h
    mac/bind_objc_block.h
    mac/bundle_locations.h
    mac/bundle_locations.mm
    mac/call_with_eh_frame.cc
    mac/call_with_eh_frame.h
    mac/call_with_eh_frame_asm.S
    mac/close_nocancel.cc
    mac/dispatch_source_mach.cc
    mac/dispatch_source_mach.h
    mac/foundation_util.h
    mac/foundation_util.mm
    mac/launch_services_util.h
    mac/launch_services_util.mm
    mac/launchd.cc
    mac/launchd.h
    mac/mac_logging.h
    mac/mac_logging.mm
    mac/mac_util.h
    mac/mac_util.mm
    mac/mach_logging.cc
    mac/mach_logging.h
    mac/mach_port_broker.h
    mac/mach_port_broker.mm
    mac/mach_port_util.cc
    mac/mach_port_util.h
    mac/objc_release_properties.h
    mac/objc_release_properties.mm
    mac/os_crash_dumps.cc
    mac/os_crash_dumps.h
    mac/scoped_aedesc.h
    mac/scoped_authorizationref.h
    mac/scoped_block.h
    mac/scoped_cffiledescriptorref.h
    mac/scoped_cftyperef.h
    mac/scoped_dispatch_object.h
    mac/scoped_ionotificationportref.h
    mac/scoped_ioobject.h
    mac/scoped_ioplugininterface.h
    mac/scoped_launch_data.h
    mac/scoped_mach_port.cc
    mac/scoped_mach_port.h
    mac/scoped_mach_vm.cc
    mac/scoped_mach_vm.h
    mac/scoped_nsautorelease_pool.h
    mac/scoped_nsautorelease_pool.mm
    mac/scoped_nsobject.h
    mac/scoped_nsobject.mm
    mac/scoped_objc_class_swizzler.h
    mac/scoped_objc_class_swizzler.mm
    mac/scoped_sending_event.h
    mac/scoped_sending_event.mm
    mac/sdk_forward_declarations.h
    mac/sdk_forward_declarations.mm

    native_library_mac.mm
    synchronization/waitable_event_mac.cc
    synchronization/waitable_event_watcher_mac.cc
)

set(BASE_SRCS_WINDOWS
    win/com_init_check_hook.cc
    win/com_init_check_hook.h
    win/com_init_util.cc
    win/com_init_util.h
    win/core_winrt_util.cc
    win/core_winrt_util.h
    win/current_module.h
    win/enum_variant.cc
    win/enum_variant.h
    win/event_trace_consumer.h
    win/event_trace_controller.cc
    win/event_trace_controller.h
    win/event_trace_provider.cc
    win/event_trace_provider.h
    win/i18n.cc
    win/i18n.h
    win/iat_patch_function.cc
    win/iat_patch_function.h
    win/iunknown_impl.cc
    win/iunknown_impl.h
    win/message_window.cc
    win/message_window.h
    win/object_watcher.cc
    win/object_watcher.h
    win/patch_util.cc
    win/patch_util.h
    win/process_startup_helper.cc
    win/process_startup_helper.h
    win/registry.cc
    win/registry.h
    win/resource_util.cc
    win/resource_util.h
    win/scoped_bstr.cc
    win/scoped_bstr.h
    win/scoped_co_mem.h
    win/scoped_com_initializer.cc
    win/scoped_com_initializer.h
    win/scoped_gdi_object.h
    win/scoped_handle.cc
    win/scoped_handle.h
    win/scoped_hdc.h
    win/scoped_hglobal.h
    win/scoped_hstring.cc
    win/scoped_hstring.h
    win/scoped_process_information.cc
    win/scoped_process_information.h
    win/scoped_propvariant.h
    win/scoped_select_object.h
    win/scoped_variant.cc
    win/scoped_variant.h
    win/scoped_windows_thread_environment.h
    win/scoped_winrt_initializer.cc
    win/scoped_winrt_initializer.h
    win/shortcut.cc
    win/shortcut.h
    win/startup_information.cc
    win/startup_information.h
    win/wait_chain.cc
    win/wait_chain.h
    win/win_util.cc
    win/win_util.h
    win/windows_version.cc
    win/windows_version.h
    win/winrt_storage_util.cc
    win/winrt_storage_util.h
    win/wrapped_window_proc.cc
    win/wrapped_window_proc.h

    native_library_win.cc
    synchronization/waitable_event_watcher_win.cc
    synchronization/waitable_event_win.cc
)

set(BASE_SRCS_IOS
    ios/block_types.h
    ios/callback_counter.h
    ios/callback_counter.mm
    ios/crb_protocol_observers.h
    ios/crb_protocol_observers.mm
    ios/device_util.h
    ios/device_util.mm
    ios/ios_util.h
    ios/ios_util.mm
    ios/ns_error_util.h
    ios/ns_error_util.mm
    ios/scoped_critical_action.h
    ios/scoped_critical_action.mm
    ios/weak_nsobject.h
    ios/weak_nsobject.mm

    native_library_ios.mm
)

set(BASE_SRCS_ANDROID
    android/android_hardware_buffer_abi.h
    android/android_hardware_buffer_compat.cc
    android/android_hardware_buffer_compat.h
    android/animation_frame_time_histogram.cc
    android/apk_assets.cc
    android/apk_assets.h
    android/application_status_listener.cc
    android/application_status_listener.h
    android/base_jni_onload.cc
    android/base_jni_onload.h
    android/build_info.cc
    android/build_info.h
    android/callback_android.cc
    android/callback_android.h
    android/child_process_service.cc
    android/command_line_android.cc
    android/content_uri_utils.cc
    android/content_uri_utils.h
    android/cpu_features.cc
    android/cxa_demangle_stub.cc
    android/early_trace_event_binding.cc
    android/event_log.cc
    android/event_log.h
    android/field_trial_list.cc
    android/important_file_writer_android.cc
    android/java_exception_reporter.cc
    android/java_exception_reporter.h
    android/java_handler_thread.cc
    android/java_handler_thread.h
    android/java_runtime.cc
    android/java_runtime.h
    android/jni_android.cc
    android/jni_android.h
    android/jni_array.cc
    android/jni_array.h
    android/jni_generator/jni_generator_helper.h
    android/jni_int_wrapper.h
    android/jni_registrar.cc
    android/jni_registrar.h
    android/jni_string.cc
    android/jni_string.h
    android/jni_utils.cc
    android/jni_utils.h
    android/jni_weak_ref.cc
    android/jni_weak_ref.h
    android/library_loader/anchor_functions.cc
    android/library_loader/anchor_functions.h
    android/library_loader/library_load_from_apk_status_codes.h
    android/library_loader/library_loader_hooks.cc
    android/library_loader/library_loader_hooks.h
    android/library_loader/library_prefetcher.cc
    android/library_loader/library_prefetcher.h
    android/locale_utils.cc
    android/locale_utils.h
    android/memory_pressure_listener_android.cc
    android/memory_pressure_listener_android.h
    android/path_service_android.cc
    android/path_utils.cc
    android/path_utils.h
    android/record_histogram.cc
    android/record_user_action.cc
    android/scoped_java_ref.cc
    android/scoped_java_ref.h
    android/statistics_recorder_android.cc
    android/sys_utils.cc
    android/sys_utils.h
    android/throw_uncaught_exception.cc
    android/throw_uncaught_exception.h
    android/time_utils.cc
    android/timezone_utils.cc
    android/timezone_utils.h
    android/trace_event_binding.cc
    android/unguessable_token_android.cc
    android/unguessable_token_android.h
)


set(BASE_SRCS
    allocator/allocator_check.cc
    allocator/allocator_check.h
    allocator/allocator_extension.cc
    allocator/allocator_extension.h
    allocator/allocator_interception_mac.h
    allocator/allocator_interception_mac.mm
    allocator/allocator_shim.h
    allocator/malloc_zone_functions_mac.cc
    allocator/malloc_zone_functions_mac.h
    at_exit.cc
    at_exit.h
    atomic_ref_count.h
    atomic_sequence_num.h
    atomicops.h
    atomicops_internals_atomicword_compat.h
    atomicops_internals_portable.h
    atomicops_internals_x86_msvc.h
    auto_reset.h
    barrier_closure.cc
    barrier_closure.h
    base64.cc
    base64.h
    base64url.cc
    base64url.h
    base_export.h
    base_switches.h
    big_endian.cc
    big_endian.h
    bind.h
    bind_helpers.cc
    bind_helpers.h
    bind_internal.h
    bit_cast.h
    bits.h
    build_time.cc
    build_time.h
    callback.h
    callback_forward.h
    callback_helpers.cc
    callback_helpers.h
    callback_internal.cc
    callback_internal.h
    callback_list.h
    cancelable_callback.h
    command_line.cc
    command_line.h
    compiler_specific.h
    containers/adapters.h
    containers/circular_deque.h
    containers/flat_map.h
    containers/flat_set.h
    containers/flat_tree.h
    containers/hash_tables.h
    containers/id_map.h
    containers/linked_list.h
    containers/mru_cache.h
    containers/small_map.h
    containers/span.h
    containers/stack.h
    containers/stack_container.h
    containers/unique_ptr_comparator.h
    containers/vector_buffer.h
    cpu.cc
    cpu.h
    critical_closure.h
    critical_closure_internal_ios.mm

    # This file depends on files from the debug/allocator target,
    # but this target does not depend on debug/allocator.
    debug/activity_analyzer.cc
    debug/activity_analyzer.h
    debug/activity_tracker.cc
    debug/activity_tracker.h
    debug/alias.cc
    debug/alias.h
    debug/asan_invalid_access.cc
    debug/asan_invalid_access.h
    debug/close_handle_hook_win.cc
    debug/close_handle_hook_win.h
    debug/crash_logging.cc
    debug/crash_logging.h
    debug/debugger.cc
    debug/debugger.h
    debug/debugger_posix.cc
    debug/debugger_win.cc
    debug/dump_without_crashing.cc
    debug/dump_without_crashing.h
    debug/gdi_debug_util_win.cc
    debug/gdi_debug_util_win.h
    debug/leak_annotations.h
    debug/leak_tracker.h
    debug/proc_maps_linux.cc
    debug/proc_maps_linux.h
    debug/profiler.cc
    debug/profiler.h
    debug/stack_trace.cc
    debug/stack_trace.h
    debug/stack_trace_android.cc
    debug/stack_trace_posix.cc
    debug/stack_trace_win.cc
    debug/task_annotator.cc
    debug/task_annotator.h
    debug/thread_heap_usage_tracker.cc
    debug/thread_heap_usage_tracker.h
    deferred_sequenced_task_runner.cc
    deferred_sequenced_task_runner.h
    environment.cc
    environment.h
    event_types.h
    export_template.h
    feature_list.cc
    feature_list.h
    file_descriptor_posix.h
    file_descriptor_store.cc
    file_descriptor_store.h
    file_version_info.h
    file_version_info_mac.h
    file_version_info_mac.mm
    file_version_info_win.cc
    file_version_info_win.h
    files/dir_reader_fallback.h
    files/dir_reader_linux.h
    files/dir_reader_posix.h
    files/file.cc
    files/file.h
    files/file_descriptor_watcher_posix.cc
    files/file_descriptor_watcher_posix.h
    files/file_enumerator.cc
    files/file_enumerator.h
    files/file_enumerator_posix.cc
    files/file_enumerator_win.cc
    files/file_path.cc
    files/file_path.h
    files/file_path_constants.cc
    files/file_path_watcher.cc
    files/file_path_watcher.h
    files/file_path_watcher_fsevents.cc
    files/file_path_watcher_fsevents.h
    files/file_path_watcher_kqueue.cc
    files/file_path_watcher_kqueue.h
    files/file_path_watcher_linux.cc
    files/file_path_watcher_mac.cc
    files/file_path_watcher_win.cc
    files/file_posix.cc
    files/file_proxy.cc
    files/file_proxy.h
    files/file_tracing.cc
    files/file_tracing.h
    files/file_util.cc
    files/file_util.h
    files/file_util_android.cc
    files/file_util_linux.cc
    files/file_util_mac.mm
    files/file_util_posix.cc
    files/file_util_proxy.cc
    files/file_util_proxy.h
    files/file_util_win.cc
    files/file_win.cc
    files/important_file_writer.cc
    files/important_file_writer.h
    files/memory_mapped_file.cc
    files/memory_mapped_file.h
    files/memory_mapped_file_posix.cc
    files/memory_mapped_file_win.cc
    files/platform_file.h
    files/scoped_file.cc
    files/scoped_file.h
    files/scoped_temp_dir.cc
    files/scoped_temp_dir.h
    format_macros.h
    gtest_prod_util.h
    guid.cc
    guid.h
    hash.cc
    hash.h
    json/json_file_value_serializer.cc
    json/json_file_value_serializer.h
    json/json_parser.cc
    json/json_parser.h
    json/json_reader.cc
    json/json_reader.h
    json/json_string_value_serializer.cc
    json/json_string_value_serializer.h
    json/json_value_converter.cc
    json/json_value_converter.h
    json/json_writer.cc
    json/json_writer.h
    json/string_escape.cc
    json/string_escape.h
    lazy_instance.h
    lazy_instance_helpers.cc
    lazy_instance_helpers.h
    linux_util.cc
    linux_util.h
    location.cc
    location.h
    logging.cc
    logging.h
    logging_win.cc
    logging_win.h
    macros.h
    md5.cc
    md5.h
    memory/aligned_memory.cc
    memory/aligned_memory.h
    memory/discardable_memory.cc
    memory/discardable_memory.h
    memory/discardable_memory_allocator.cc
    memory/discardable_memory_allocator.h
    memory/discardable_shared_memory.cc
    memory/discardable_shared_memory.h
    memory/free_deleter.h
    memory/linked_ptr.h
    memory/memory_coordinator_client.cc
    memory/memory_coordinator_client.h
    memory/memory_coordinator_client_registry.cc
    memory/memory_coordinator_client_registry.h
    memory/memory_coordinator_proxy.cc
    memory/memory_coordinator_proxy.h
    memory/memory_pressure_listener.cc
    memory/memory_pressure_listener.h
    memory/memory_pressure_monitor.cc
    memory/memory_pressure_monitor.h
    memory/memory_pressure_monitor_chromeos.cc
    memory/memory_pressure_monitor_chromeos.h
    memory/memory_pressure_monitor_mac.cc
    memory/memory_pressure_monitor_mac.h
    memory/memory_pressure_monitor_win.cc
    memory/memory_pressure_monitor_win.h
    memory/protected_memory.h
    memory/protected_memory_cfi.h
    memory/protected_memory_posix.cc
    memory/ptr_util.h
    memory/raw_scoped_refptr_mismatch_checker.h
    memory/ref_counted.cc
    memory/ref_counted.h
    memory/ref_counted_delete_on_sequence.h
    memory/ref_counted_memory.cc
    memory/ref_counted_memory.h
    memory/scoped_policy.h
    memory/scoped_refptr.h
    memory/shared_memory.h
    memory/shared_memory_handle.cc
    memory/shared_memory_handle.h
    memory/shared_memory_helper.cc
    memory/shared_memory_helper.h
    memory/shared_memory_tracker.cc
    memory/shared_memory_tracker.h
    memory/singleton.h
    memory/weak_ptr.cc
    memory/weak_ptr.h
    message_loop/incoming_task_queue.cc
    message_loop/incoming_task_queue.h
    message_loop/message_loop.cc
    message_loop/message_loop.h
    message_loop/message_loop_task_runner.cc
    message_loop/message_loop_task_runner.h
    message_loop/message_pump.cc
    message_loop/message_pump.h
    message_loop/message_pump_android.cc
    message_loop/message_pump_android.h
    message_loop/message_pump_default.cc
    message_loop/message_pump_default.h
    message_loop/message_pump_glib.cc
    message_loop/message_pump_glib.h
    message_loop/message_pump_io_ios.cc
    message_loop/message_pump_io_ios.h
    message_loop/message_pump_libevent.cc
    message_loop/message_pump_libevent.h
    message_loop/message_pump_mac.h
    message_loop/message_pump_mac.mm
    message_loop/message_pump_win.cc
    message_loop/message_pump_win.h
    message_loop/timer_slack.h
    metrics/bucket_ranges.cc
    metrics/bucket_ranges.h
    metrics/field_trial.cc
    metrics/field_trial.h
    metrics/field_trial_param_associator.cc
    metrics/field_trial_param_associator.h
    metrics/field_trial_params.cc
    metrics/field_trial_params.h
    metrics/histogram.cc
    metrics/histogram.h
    metrics/histogram_base.cc
    metrics/histogram_base.h
    metrics/histogram_delta_serialization.cc
    metrics/histogram_delta_serialization.h
    metrics/histogram_flattener.h
    metrics/histogram_functions.cc
    metrics/histogram_functions.h
    metrics/histogram_macros.h
    metrics/histogram_macros_internal.h
    metrics/histogram_macros_local.h
    metrics/histogram_samples.cc
    metrics/histogram_samples.h
    metrics/histogram_snapshot_manager.cc
    metrics/histogram_snapshot_manager.h
    metrics/metrics_hashes.cc
    metrics/metrics_hashes.h
    metrics/persistent_histogram_allocator.cc
    metrics/persistent_histogram_allocator.h
    metrics/persistent_memory_allocator.cc
    metrics/persistent_memory_allocator.h
    metrics/persistent_sample_map.cc
    metrics/persistent_sample_map.h
    metrics/record_histogram_checker.h
    metrics/sample_map.cc
    metrics/sample_map.h
    metrics/sample_vector.cc
    metrics/sample_vector.h
    metrics/single_sample_metrics.cc
    metrics/single_sample_metrics.h
    metrics/sparse_histogram.cc
    metrics/sparse_histogram.h
    metrics/statistics_recorder.cc
    metrics/statistics_recorder.h
    metrics/user_metrics.cc
    metrics/user_metrics.h
    metrics/user_metrics_action.h
    native_library.cc
    native_library.h
    nix/mime_util_xdg.cc
    nix/mime_util_xdg.h
    nix/xdg_util.cc
    nix/xdg_util.h
    no_destructor.h
    observer_list.h
    observer_list_threadsafe.cc
    observer_list_threadsafe.h
    optional.h
    os_compat_android.cc
    os_compat_android.h
    os_compat_nacl.cc
    os_compat_nacl.h
    path_service.cc
    path_service.h
    pending_task.cc
    pending_task.h
    pickle.cc
    pickle.h
    posix/eintr_wrapper.h
    posix/file_descriptor_shuffle.cc
    posix/file_descriptor_shuffle.h
    posix/global_descriptors.cc
    posix/global_descriptors.h
    posix/safe_strerror.cc
    posix/safe_strerror.h
    posix/unix_domain_socket.h
    post_task_and_reply_with_result_internal.h
    power_monitor/power_monitor.cc
    power_monitor/power_monitor.h
    power_monitor/power_monitor_device_source.cc
    power_monitor/power_monitor_device_source.h
    power_monitor/power_monitor_source.cc
    power_monitor/power_monitor_source.h
    power_monitor/power_observer.h
    process/internal_linux.cc
    process/internal_linux.h
    process/kill.cc
    process/kill.h
    process/kill_mac.cc
    process/kill_posix.cc
    process/kill_win.cc
    process/launch.cc
    process/launch.h
    process/launch_ios.cc
    process/launch_mac.cc
    process/launch_posix.cc
    process/launch_win.cc
    process/memory.cc
    process/memory.h
    process/memory_linux.cc
    process/memory_mac.mm
    process/memory_win.cc
    process/port_provider_mac.cc
    process/port_provider_mac.h
    process/process.h
    process/process_handle.cc
    process/process_handle.h

    #process/process_handle_freebsd.cc  # Unused in Chromium build.
    process/process_handle_linux.cc
    process/process_handle_mac.cc

    #process/process_handle_openbsd.cc  # Unused in Chromium build.
    process/process_handle_posix.cc
    process/process_handle_win.cc
    process/process_info.h
    process/process_info_linux.cc
    process/process_info_mac.cc
    process/process_info_win.cc
    process/process_iterator.cc
    process/process_iterator.h

    #process/process_iterator_freebsd.cc  # Unused in Chromium build.
    process/process_iterator_linux.cc
    process/process_iterator_mac.cc

    #process/process_iterator_openbsd.cc  # Unused in Chromium build.
    process/process_iterator_win.cc
    process/process_linux.cc
    process/process_mac.cc
    process/process_metrics.cc
    process/process_metrics.h

    #process/process_metrics_freebsd.cc  # Unused in Chromium build.
    process/process_metrics_ios.cc
    process/process_metrics_linux.cc
    process/process_metrics_mac.cc

    #process/process_metrics_openbsd.cc  # Unused in Chromium build.
    process/process_metrics_posix.cc
    process/process_metrics_win.cc
    process/process_posix.cc
    process/process_win.cc
    profiler/native_stack_sampler.cc
    profiler/native_stack_sampler.h
    profiler/native_stack_sampler_mac.cc
    profiler/native_stack_sampler_posix.cc
    profiler/native_stack_sampler_win.cc
    profiler/stack_sampling_profiler.cc
    profiler/stack_sampling_profiler.h
    rand_util.cc
    rand_util.h
    rand_util_nacl.cc
    rand_util_posix.cc
    rand_util_win.cc
    run_loop.cc
    run_loop.h
    scoped_clear_errno.h
    scoped_generic.h
    scoped_native_library.cc
    scoped_native_library.h
    scoped_observer.h
    sequence_checker.h
    sequence_checker_impl.cc
    sequence_checker_impl.h
    sequence_token.cc
    sequence_token.h
    sequenced_task_runner.cc
    sequenced_task_runner.h
    sequenced_task_runner_helpers.h
    sha1.cc
    sha1.h
    single_thread_task_runner.h
    stl_util.h
    strings/latin1_string_conversions.cc
    strings/latin1_string_conversions.h
    strings/nullable_string16.cc
    strings/nullable_string16.h
    strings/pattern.cc
    strings/pattern.h
    strings/safe_sprintf.cc
    strings/safe_sprintf.h
    strings/strcat.cc
    strings/strcat.h
    strings/string16.cc
    strings/string16.h
    strings/string_number_conversions.cc
    strings/string_number_conversions.h
    strings/string_piece.cc
    strings/string_piece.h
    strings/string_piece_forward.h
    strings/string_split.cc
    strings/string_split.h
    strings/string_tokenizer.h
    strings/string_util.cc
    strings/string_util.h
    strings/string_util_constants.cc
    strings/string_util_posix.h
    strings/string_util_win.h
    strings/stringize_macros.h
    strings/stringprintf.cc
    strings/stringprintf.h
    strings/sys_string_conversions.h
    strings/sys_string_conversions_mac.mm
    strings/sys_string_conversions_posix.cc
    strings/sys_string_conversions_win.cc
    strings/utf_offset_string_conversions.cc
    strings/utf_offset_string_conversions.h
    strings/utf_string_conversion_utils.cc
    strings/utf_string_conversion_utils.h
    strings/utf_string_conversions.cc
    strings/utf_string_conversions.h
    supports_user_data.cc
    supports_user_data.h
    sync_socket.h
    sync_socket_posix.cc
    sync_socket_win.cc
    synchronization/atomic_flag.cc
    synchronization/atomic_flag.h
    synchronization/cancellation_flag.h
    synchronization/condition_variable.h
    synchronization/condition_variable_posix.cc
    synchronization/condition_variable_win.cc
    synchronization/lock.cc
    synchronization/lock.h
    synchronization/lock_impl.h
    synchronization/lock_impl_posix.cc
    synchronization/lock_impl_win.cc
    synchronization/spin_wait.h
    synchronization/waitable_event.h
    synchronization/waitable_event_watcher.h
    sys_byteorder.h
    sys_info.cc
    sys_info.h
    sys_info_android.cc
    sys_info_chromeos.cc
    sys_info_internal.h
    syslog_logging.cc
    syslog_logging.h

    #sys_info_freebsd.cc  # Unused in Chromium build.
    sys_info_ios.mm
    sys_info_linux.cc
    sys_info_mac.mm

    #sys_info_openbsd.cc  # Unused in Chromium build.
    sys_info_posix.cc
    sys_info_win.cc
    system_monitor/system_monitor.cc
    system_monitor/system_monitor.h
    task/cancelable_task_tracker.cc
    task/cancelable_task_tracker.h
    task_runner.cc
    task_runner.h
    task_runner_util.h
    task_scheduler/can_schedule_sequence_observer.h
    task_scheduler/delayed_task_manager.cc
    task_scheduler/delayed_task_manager.h
    task_scheduler/environment_config.cc
    task_scheduler/environment_config.h
    task_scheduler/initialization_util.cc
    task_scheduler/initialization_util.h
    task_scheduler/lazy_task_runner.cc
    task_scheduler/lazy_task_runner.h
    task_scheduler/platform_native_worker_pool_win.cc
    task_scheduler/platform_native_worker_pool_win.h
    task_scheduler/post_task.cc
    task_scheduler/post_task.h
    task_scheduler/priority_queue.cc
    task_scheduler/priority_queue.h
    task_scheduler/scheduler_lock.h
    task_scheduler/scheduler_lock_impl.cc
    task_scheduler/scheduler_lock_impl.h
    task_scheduler/scheduler_single_thread_task_runner_manager.cc
    task_scheduler/scheduler_single_thread_task_runner_manager.h
    task_scheduler/scheduler_worker.cc
    task_scheduler/scheduler_worker.h
    task_scheduler/scheduler_worker_params.h
    task_scheduler/scheduler_worker_pool.cc
    task_scheduler/scheduler_worker_pool.h
    task_scheduler/scheduler_worker_pool_impl.cc
    task_scheduler/scheduler_worker_pool_impl.h
    task_scheduler/scheduler_worker_pool_params.cc
    task_scheduler/scheduler_worker_pool_params.h
    task_scheduler/scheduler_worker_stack.cc
    task_scheduler/scheduler_worker_stack.h
    task_scheduler/scoped_set_task_priority_for_current_thread.cc
    task_scheduler/scoped_set_task_priority_for_current_thread.h
    task_scheduler/sequence.cc
    task_scheduler/sequence.h
    task_scheduler/sequence_sort_key.cc
    task_scheduler/sequence_sort_key.h
    task_scheduler/single_thread_task_runner_thread_mode.h
    task_scheduler/task.cc
    task_scheduler/task.h
    task_scheduler/task_scheduler.cc
    task_scheduler/task_scheduler.h
    task_scheduler/task_scheduler_impl.cc
    task_scheduler/task_scheduler_impl.h
    task_scheduler/task_tracker.cc
    task_scheduler/task_tracker.h
    task_scheduler/task_tracker_posix.cc
    task_scheduler/task_tracker_posix.h
    task_scheduler/task_traits.cc
    task_scheduler/task_traits.h
    task_scheduler/task_traits_details.h
    template_util.h
    test/malloc_wrapper.h
    third_party/dmg_fp/dmg_fp.h
    third_party/dmg_fp/dtoa_wrapper.cc
    third_party/dmg_fp/g_fmt.cc
    third_party/icu/icu_utf.cc
    third_party/icu/icu_utf.h
    third_party/nspr/prtime.cc
    third_party/nspr/prtime.h
    third_party/superfasthash/superfasthash.c
    threading/platform_thread.h
    threading/platform_thread_android.cc
    threading/platform_thread_internal_posix.cc
    threading/platform_thread_internal_posix.h
    threading/platform_thread_linux.cc
    threading/platform_thread_mac.mm
    threading/platform_thread_posix.cc
    threading/platform_thread_win.cc
    threading/post_task_and_reply_impl.cc
    threading/post_task_and_reply_impl.h
    threading/scoped_blocking_call.cc
    threading/scoped_blocking_call.h
    threading/sequence_local_storage_map.cc
    threading/sequence_local_storage_map.h
    threading/sequence_local_storage_slot.cc
    threading/sequence_local_storage_slot.h
    threading/sequenced_task_runner_handle.cc
    threading/sequenced_task_runner_handle.h
    threading/sequenced_worker_pool.cc
    threading/sequenced_worker_pool.h
    threading/simple_thread.cc
    threading/simple_thread.h
    threading/thread.cc
    threading/thread.h
    threading/thread_checker.h
    threading/thread_checker_impl.cc
    threading/thread_checker_impl.h
    threading/thread_collision_warner.cc
    threading/thread_collision_warner.h
    threading/thread_id_name_manager.cc
    threading/thread_id_name_manager.h
    threading/thread_local.h
    threading/thread_local_storage.cc
    threading/thread_local_storage.h
    threading/thread_local_storage_posix.cc
    threading/thread_local_storage_win.cc
    threading/thread_restrictions.cc
    threading/thread_restrictions.h
    threading/thread_task_runner_handle.cc
    threading/thread_task_runner_handle.h
    threading/watchdog.cc
    threading/watchdog.h
    time/clock.cc
    time/clock.h
    time/default_clock.cc
    time/default_clock.h
    time/default_tick_clock.cc
    time/default_tick_clock.h
    time/tick_clock.cc
    time/tick_clock.h
    time/time.cc
    time/time.h
    timer/elapsed_timer.cc
    timer/elapsed_timer.h
    timer/hi_res_timer_manager.h
    timer/hi_res_timer_manager_posix.cc
    timer/hi_res_timer_manager_win.cc
    timer/mock_timer.cc
    timer/mock_timer.h
    timer/timer.cc
    timer/timer.h
    trace_event/auto_open_close_event.cc
    trace_event/auto_open_close_event.h
    trace_event/blame_context.cc
    trace_event/blame_context.h
    trace_event/category_registry.cc
    trace_event/category_registry.h
    trace_event/common/trace_event_common.h
    trace_event/event_name_filter.cc
    trace_event/event_name_filter.h
    trace_event/heap_profiler.h
    trace_event/heap_profiler_allocation_context.cc
    trace_event/heap_profiler_allocation_context.h
    trace_event/heap_profiler_allocation_context_tracker.cc
    trace_event/heap_profiler_allocation_context_tracker.h
    trace_event/heap_profiler_allocation_register.cc
    trace_event/heap_profiler_allocation_register.h
    trace_event/heap_profiler_allocation_register_posix.cc
    trace_event/heap_profiler_allocation_register_win.cc
    trace_event/heap_profiler_event_filter.cc
    trace_event/heap_profiler_event_filter.h
    trace_event/heap_profiler_heap_dump_writer.cc
    trace_event/heap_profiler_heap_dump_writer.h
    trace_event/heap_profiler_serialization_state.cc
    trace_event/heap_profiler_serialization_state.h
    trace_event/heap_profiler_stack_frame_deduplicator.cc
    trace_event/heap_profiler_stack_frame_deduplicator.h
    trace_event/heap_profiler_type_name_deduplicator.cc
    trace_event/heap_profiler_type_name_deduplicator.h
    trace_event/java_heap_dump_provider_android.cc
    trace_event/java_heap_dump_provider_android.h
    trace_event/malloc_dump_provider.cc
    trace_event/malloc_dump_provider.h
    trace_event/memory_allocator_dump.cc
    trace_event/memory_allocator_dump.h
    trace_event/memory_allocator_dump_guid.cc
    trace_event/memory_allocator_dump_guid.h
    trace_event/memory_dump_manager.cc
    trace_event/memory_dump_manager.h
    trace_event/memory_dump_manager_test_utils.h
    trace_event/memory_dump_provider.h
    trace_event/memory_dump_provider_info.cc
    trace_event/memory_dump_provider_info.h
    trace_event/memory_dump_request_args.cc
    trace_event/memory_dump_request_args.h
    trace_event/memory_dump_scheduler.cc
    trace_event/memory_dump_scheduler.h
    trace_event/memory_infra_background_whitelist.cc
    trace_event/memory_infra_background_whitelist.h
    trace_event/memory_peak_detector.cc
    trace_event/memory_peak_detector.h
    trace_event/memory_usage_estimator.cc
    trace_event/memory_usage_estimator.h
    trace_event/process_memory_dump.cc
    trace_event/process_memory_dump.h
    trace_event/sharded_allocation_register.cc
    trace_event/sharded_allocation_register.h
    trace_event/trace_buffer.cc
    trace_event/trace_buffer.h
    trace_event/trace_category.h
    trace_event/trace_config.cc
    trace_event/trace_config.h
    trace_event/trace_config_category_filter.cc
    trace_event/trace_config_category_filter.h
    trace_event/trace_event.h
    trace_event/trace_event_android.cc
    trace_event/trace_event_argument.cc
    trace_event/trace_event_argument.h
    trace_event/trace_event_etw_export_win.cc
    trace_event/trace_event_etw_export_win.h
    trace_event/trace_event_filter.cc
    trace_event/trace_event_filter.h
    trace_event/trace_event_impl.cc
    trace_event/trace_event_impl.h
    trace_event/trace_event_memory_overhead.cc
    trace_event/trace_event_memory_overhead.h
    trace_event/trace_event_system_stats_monitor.cc
    trace_event/trace_event_system_stats_monitor.h
    trace_event/trace_log.cc
    trace_event/trace_log.h
    trace_event/trace_log_constants.cc
    trace_event/tracing_agent.cc
    trace_event/tracing_agent.h
    tuple.h
    unguessable_token.cc
    unguessable_token.h
    value_conversions.cc
    value_conversions.h
    value_iterators.cc
    value_iterators.h
    values.cc
    values.h
    version.cc
    version.h
    vlog.cc
    vlog.h
)

list(FILTER BASE_SRCS EXCLUDE REGEX "_nacl\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_glib\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_chromeos\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_ios\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_android\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_win\\.")
list(FILTER BASE_SRCS EXCLUDE REGEX "_linux\\.")

APPEND_PLATFORM_SOURCES(BASE_SRCS)


add_library(base STATIC ${BASE_SRCS})


